MODULO-KUBERNETES/sesion3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 10
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: main
        image: lemoncodersbc/go-hello-world
        ports:
        - containerPort: 80
