MODULO-KUBERNETES/sesion3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  ports:
  - port: 8080
    targetPort: 80
  # type: LoadBalancer
